# parakeet-cli

./: .dockerignore  .gitattributes  .gitignore  .npmignore  BENCHMARK.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  SKILL.md  compose.yml  demo.tape  flake.nix  index.html  openclaw-plugin.cjs  package.json  styles.css  tsconfig.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  install_support.yml  performance.yml
.github/actions/install-kesha-backend/: action.yml
.github/scripts/: build-linux-packages.mjs  check-coverage.ts  check-versions.ts  check-workflows.ts  junit-to-markdown.ts  linux-package-names.mjs  release-manifest.mjs  update-homebrew-tap.mjs
.github/workflows/: build-engine.yml  cargo-dependency-maintenance.yml  ci.yml  docker.yml  homebrew-tap.yml  linux-packages.yml  npm-publish.yml  rust-test.yml
completions/: kesha.bash  kesha.fish  kesha.zsh
docs/: hermes.md  homebrew.md  linux-packages.md  nix-install.md  openclaw.md  product-positioning.md  release-manifest.md  tts.md
docs/plans/: 2026-05-09-consolidate-ipa-lexicon-docs.md  2026-05-11-nix-flake-followup-pr-242.md
docs/plans/completed/: 2026-05-09-consolidate-ipa-lexicon-docs.md  2026-05-11-nix-flake-followup-pr-242.md
docs/superpowers/plans/: 2026-05-07-kokoro-en-acronym-expansion.md  2026-05-10-prosody-rate.md  2026-05-20-fluidaudio-sidecar-collapse.md
docs/superpowers/specs/: 2026-05-07-kokoro-en-acronym-expansion-design.md  2026-05-09-darwin-diarization-poc-design.md  2026-05-10-prosody-rate-design.md  2026-05-15-fluidaudio-kokoro-ane-spike.md  2026-05-15-sherpa-supertonic-tts-spike.md  2026-05-20-fluidaudio-sidecar-collapse-design.md  2026-05-21-ukrainian-styletts2-tts-spike.md
man/: kesha.1
packaging/: nfpm.yaml
packaging/homebrew/Formula/: kesha-voice-kit.rb
raycast/: CHANGELOG.md  README.md  package-lock.json  package.json  raycast-env.d.ts  tsconfig.json
raycast/src/: dictate-to-clipboard.tsx
raycast/src/lib/: kesha-bin.ts
rust/: Cargo.toml  build.rs
rust/.config/: nextest.toml
rust/ci/: run-cargo-test.sh
rust/src/: audio.rs  capabilities.rs  debug.rs  lang_id.rs  lib.rs  main.rs  models.rs  record.rs  say_loop.rs  text_lang.rs  transcribe.rs
rust/src/backend/: fluidaudio.rs
rust/src/cli/: detect_lang.rs  detect_text_lang.rs  install.rs  mod.rs  record.rs  say.rs  transcribe.rs
rust/src/transcribe/: diarize.rs  mod.rs  options.rs
rust/src/tts/: chatterbox.rs  fluid_kokoro.rs  g2p.rs  mod.rs  say.rs  ssml.rs  voices.rs  warn.rs
rust/src/tts/en/: acronym.rs  letter_table.rs  mod.rs
rust/src/tts/ssml/: mod.rs  rate.rs  segment.rs  walker.rs  warnings.rs
rust/swift/: kesha-textlang.swift
rust/tests/: audio_format.rs  debug_ndjson_fd.rs  diarize_e2e.rs  ssml_integration.rs  tts_e2e.rs  tts_en_normalize.rs  tts_prosody_rate.rs  tts_ru_normalize.rs  tts_smoke.rs  tts_stdin_loop.rs
rust/tests/common/: mod.rs
rust/tests/fixtures/: silence.m4a
scripts/: benchmark.ts  smoke-test.ts
src/: cli.ts  doctor.ts  engine-install.ts  engine.ts  install-plan.ts  lib.ts  log.ts  package-info.ts  paths.ts  process-tree.ts  progress.ts  shell-artifacts.ts  star.ts  stats.ts  status.ts  synth.ts  transcribe.ts  types.ts  voice-routing.ts
src/cli/: dispatch.ts  doctor.ts  init.ts  install.ts  main.ts  record.ts  say.ts  stats.ts  status.ts
swift/kesha-kokoro/: Package.resolved  Package.swift
swift/kesha-kokoro/Sources/kesha-kokoro/: main.swift
tests/fixtures/: hello-english.oga  test-vocab.txt
tests/helpers/: process.ts
tests/integration/: cli-contracts.test.ts  cli-scenario.ts  e2e-cli.test.ts  e2e-engine.test.ts  say.test.ts
tests/unit/: cli.test.ts  doctor.test.ts  engine.test.ts  init.test.ts  install-plan.test.ts  lib.test.ts  progress.test.ts  say-cli.test.ts  shell-artifacts.test.ts  star.test.ts  stats.test.ts  status.test.ts  synth.test.ts  voice-routing.test.ts
