[package]
name = "kesha-engine"
version = "1.11.0"
edition = "2021"
description = "Inference engine for Kesha Voice Kit: ASR + language detection"

[lib]
name = "kesha_engine"
path = "src/lib.rs"

[[bin]]
name = "kesha-engine"
path = "src/main.rs"

[features]
default = ["onnx", "tts"]
# ASR backend selection. Language detection always uses ONNX regardless.
# `tempfile` is pulled in by `coreml` because the FluidAudio backend writes
# a temp WAV per VAD segment (`fluidaudio-rs 0.1.0` lacks transcribe_samples).
coreml = ["dep:fluidaudio-rs", "dep:tempfile"]
onnx = []
tts = ["dep:hound", "dep:thiserror", "dep:ssml-parser", "dep:opus", "dep:ogg"]
# macOS-only AVSpeechSynthesizer backend for `macos-*` voices (#141).
# Opt-in — builds a Swift sidecar via swiftc in build.rs. Silently no-op on
# non-macOS targets even when enabled.
system_tts = ["tts"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

# Audio decoding
symphonia = { version = "0.5", features = ["mp3", "ogg", "flac", "aac", "pcm", "wav"] }
symphonia-adapter-libopus = "0.2"
rubato = "2"

# HTTP downloads
ureq = "3"
dirs = "6"
# Bounded thread pool for concurrent model fetches (#178). Rayon's blocking
# threads fit ureq's blocking API; we cap the pool at 4 workers ourselves.
rayon = "1"

# ONNX Runtime: always needed for audio language detection (speechbrain);
# also drives ASR transcription when the `onnx` feature is enabled.
ort = { version = "2.0.0-rc.12" }
ndarray = { version = "0.17" }

# CoreML backend (macOS): FluidAudio/Apple Neural Engine for ASR.
fluidaudio-rs = { version = "0.1", optional = true }
audioadapter-buffers = "3.0.0"

# TTS (Kokoro + SSML parser; G2P via ONNX ByT5 at runtime, see #123)
hound = { version = "3.5", optional = true }
thiserror = { version = "1", optional = true }
sha2 = "0.10"
ssml-parser = { version = "0.1", optional = true }

# Opus encoding for `kesha say --format ogg-opus` (#223). The `opus` crate is
# safe Rust bindings around libopus (BSD-3, vendored via `audiopus_sys`); `ogg`
# is a pure-Rust container muxer. Both are MIT/Apache-2.0 — license-compatible.
opus = { version = "0.3", optional = true }
ogg = { version = "0.9", optional = true }

tempfile = { version = "3", optional = true }
# Pinned exactly so transitive minor bumps can't silently mutate the IPA
# our `g2p_parity` test freezes — see #207.
misaki-rs = { version = "=0.3.0", default-features = false }
vosk_tts = { path = "vendor/vosk-tts" }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
