[package]
name = "kesha-engine"
version = "1.18.5"
edition = "2021"
description = "Inference engine for Kesha Voice Kit: ASR + language detection"
# Not for crates.io. The library target (`src/lib.rs`) exists only for the
# in-tree integration tests; the binary (`src/main.rs`) is the public
# surface and ships via GitHub Releases. See #267 F17 / #313 P0.
publish = false

[lib]
name = "kesha_engine"
path = "src/lib.rs"

[[bin]]
name = "kesha-engine"
path = "src/main.rs"
test = false

[features]
default = ["onnx", "tts"]
# ASR backend selection. Language detection always uses ONNX regardless.
# `tempfile` is pulled in by `coreml` because the FluidAudio backend writes
# a temp WAV per VAD segment (`fluidaudio-rs 0.1.0` lacks transcribe_samples).
# `libc` is used by the coreml backend to silence FluidAudio's stdout during
# transcribe_file calls — without it, the Swift-side `print("Transcribe error:
# invalidAudioData")` (see #259) interleaves with kesha-engine's JSON output.
coreml = ["dep:fluidaudio-rs", "dep:tempfile", "dep:libc"]
onnx = []
tts = ["dep:thiserror", "dep:ssml-parser", "dep:opus", "dep:ogg"]
# macOS-only AVSpeechSynthesizer backend for `macos-*` voices (#141).
# Opt-in — builds a Swift sidecar via swiftc in build.rs. Silently no-op on
# non-macOS targets even when enabled.
system_tts = ["tts"]
# macOS arm64 Kokoro via FluidAudio CoreML sidecar. Keeps Linux/Windows on the
# existing ONNX Kokoro path while darwin-arm64 release builds avoid ONNX for
# English TTS.
system_kokoro = ["tts"]
# darwin-arm64 speaker diarization via FluidAudio (#199). Requires FluidAudio's
# diarization SDK and companion helper binary. Darwin-only.
system_diarize = []
# macOS-only fast-path for `detect-text-lang`: precompiled NLLanguageRecognizer
# sidecar replacing the per-call `swift -e` shell-out. Opt-in — requires
# `swiftc` at build time (build.rs::build_text_lang_helper). When off, the
# macOS arm of text_lang.rs falls back to the legacy `swift -e` path, so
# minimal dev environments without Xcode CLT continue to build.
system_text_lang = []

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

# Audio decoding
symphonia = { version = "0.5", features = ["mp3", "ogg", "flac", "aac", "pcm", "wav", "isomp4"] }
symphonia-adapter-libopus = "0.2"
rubato = "2"

# HTTP downloads
ureq = "3"
dirs = "6"
# Bounded thread pool for concurrent model fetches (#178). Rayon's blocking
# threads fit ureq's blocking API; we cap the pool at 4 workers ourselves.
rayon = "1"

# ONNX Runtime: always needed for audio language detection (speechbrain);
# also drives ASR transcription when the `onnx` feature is enabled.
ort = { version = "2.0.0-rc.12" }
ndarray = { version = "0.17" }

# CoreML backend (macOS): FluidAudio/Apple Neural Engine for ASR.
fluidaudio-rs = { version = "0.1", optional = true }
audioadapter-buffers = "3.0.0"

# TTS (Kokoro + SSML parser; G2P via ONNX ByT5 at runtime, see #123)
hound = "3.5"
thiserror = { version = "1", optional = true }
sha2 = "0.10"
ssml-parser = { version = "0.1", optional = true }

# Opus encoding for `kesha say --format ogg-opus` (#223). The `opus` crate is
# safe Rust bindings around libopus (BSD-3, vendored via `audiopus_sys`); `ogg`
# is a pure-Rust container muxer. Both are MIT/Apache-2.0 — license-compatible.
opus = { version = "0.3", optional = true }
ogg = { version = "0.9", optional = true }

tempfile = { version = "3", optional = true }
libc = { version = "0.2", optional = true }
# Keep G2P dependency changes explicit; intentional bumps should review the
# source-level routing/shape smoke tests instead of relying on transitive drift.
misaki-rs = { version = "=0.3.0", default-features = false }
vosk_tts = { path = "vendor/vosk-tts" }

[target.'cfg(target_os = "macos")'.dependencies]
cpal = "0.15"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
